--- a/app/sass/libs.sass
+++ b/app/sass/libs.sass
@@ -4,4 +4,5 @@
 @import "../libs/css-hamburgers/hamburgers.css" 
 @import '../libs/owl.carousel/assets/owl.carousel.min.css'
 @import '../libs/lightZoom/style.css'
+@import '../libs/fotorama/fotorama.css'
 
