--- a/app/sass/media.sass
+++ b/app/sass/media.sass
@@ -10,11 +10,11 @@
 		img
 			width: 160px
 
-
 		.logo-name
 			margin-left: 15px
 
-
+		.owl-next, .owl-prev
+			top: 160px
 
 
 /* Medium Devices, Desktops */
