--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -12,20 +12,24 @@
 		box-sizing: border-box
 
 *::-webkit-input-placeholder
-	color: #666
+	color: $accent
 	opacity: 1
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .3)
 
 *:-moz-placeholder
-	color: #666
+	color: $accent
 	opacity: 1
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .3)
 
 *::-moz-placeholder
-	color: #666
+	color: $accent
 	opacity: 1
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .3)
 
 *:-ms-input-placeholder
-	color: #666
+	color: $accent
 	opacity: 1
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .3)
 
 body input:focus:required:invalid,
 body textarea:focus:required:invalid
@@ -538,7 +542,7 @@ section, header
 	
 
 
-.fas 
+.fas, .far
 		color: $accent
 		font-size: 30px
 		opacity: 0.5
@@ -598,5 +602,246 @@ section, header
 		left: 25px
 		&::before
 			content: '\f104'
+
+.call-request
+	background-position: cover
+
+
+.success
+	position: absolute
+	top: 0
+	left: 0
+	right: 0
+	bottom: 0
+	text-transform: uppercase
+	font-weight: bold
+	display: none //flex
+	z-index: 10
+	span
+		margin: auto
+		font-size: 40px
+	& ~ *
+		transition: all .5s ease
+	&.active
+		& ~ *
+			opacity: .5
+			filter: blur(10px)
+.call-back
+	padding: 0% 5% 10% 5%
+	position: relative
+	display: flex
+	flex-direction: column
+.call-back-overley
+	&::before
+		content: ''
+		background-color: #30225d
+		opacity: 0.7
+		position: absolute
+		top: 0
+		left: 0
+		right: 0
+		bottom: 0
+
+	.call-back-logo
+		text-align: center
+		display: flex
+		flex-direction: column
+		text-align: center
+		padding: 30px 0
+		img
+			width: 125px
+			height: auto
+	.h2
+		text-align: center
+		padding: 0 5%
+	p
+		text-align: center
+		margin: 0 0 50px 0
+		padding: 0
+	
+	.input-wrapper
+		display: flex
+		flex-direction: column
+		align-items: center
+		.button
+			font-family: $default-font
+			font-size: 14px
+
+	.call-back
+		position: relative
+		display: flex
+		flex-direction: column
+		justify-content: center
+		margin: 0 auto
+
+	input
+		-webkit-box-shadow: inset 0 0 0 50px #fff
+    -webkit-text-fill-color: #000
+
+		display: inline-block
+		margin-bottom: 20px
+		font-size: 16px
+		padding: 8px 22px
+		width: 350px
+	#callback-name, #callback-tel
+		border: 2px solid white
+		border-radius: 5px
+		color: $accent
+		text-shadow: 0 1px 1px rgba(0, 0, 0, .3)
+		&:active, &:focus
+			outline: 2px solid $accent
+			border: 2px solid $accent
+		&:focus, &:active, &:hover
+			outline: none
+.review
+	padding: 5% 0
+	.review-header
+		font-weight: 700
+		font-size: 30px
+		font-style: italic
+		margin-top: 30px
+	.review-stars
+		margin: 10px 0
+		color: $accent
+	.review-text
+		margin-top: 10px
+	.reviews
+		text-align: center
+
+	.owl-dots
+		width: 100%
+		text-align: center
+		margin-top: 60px
+		.owl-dot
+			width: 8px
+			height: 8px
+			background-color: #000
+			border-radius: 10em
+			display: inline-block
+			margin-right: 7px
+			transition: background-color .5s ease, transform .5s ease
+			&.active
+				background-color: $accent
+				transform: scale(1.3)
+
+.quotes
+	position: absolute
+	width: 100%
+	&::after, &::before
+		content: ',,'
+		position: absolute
+		font-size: 56px
+		font-family: 'Time New Roman', serif
+		font-weight: bold
+		line-height: 0	
+		color: $accent
+		transform: rotate(180deg)
+		display: block
+		top: 165px
+	&::before
+		top: 200px
+		left: -60px
+	&::after
+		right: -60px
+		transform: rotate(0)
+footer
+	background-color: #4c3f79
+	color: #fff
+	.footer-column
+		margin: 15px 0
+		font-size: 14px
+		img
+			display: block
+			margin: 0 auto
+			margin-top: 20px
+			width: 50px
+			height: auto
+			vartical-align: middle
+	ul
+		list-style: none
+		a
+			display: block
+			color: #fff
+
+	.social-footer
+		ul 
+			display: flex
+			justify-content: space-between
+			padding: 0
+			margin: 0
+			list-style-type: none
+			li a
+				font-size: 18px
+				color: #fff
+				width: 38px
+				height: 38px
+				text-align: center
+				line-height: 40px
+				border-radius: 10em
+				background-color: rgba(214, 142, 237, .6)
+				margin: 18px 0
+				.fa-telegram-plane
+					position: relative
+					left: -1px
+			li a
+				&:hover
+					-webkit-transition: background-color .3s ease
+					transition: background-color .3s ease
+					background-color: lighten($accent, 5%)
+				&::after
+					opacity: .22
+				&:active
+					background-color: darken($accent, 5%)
+				&::after
+					opacity: .32
+
+	.footer-menu
+		margin-left: 30px
+		ul
+			padding: 0
+			margin: 0
+			display: flex
+			flex-direction: column
+			transition: color .25s ease
+			font-size: 14px
+			font-weight: 400
+			li
+
+				a
+					display: inline-block
+					padding: 4px 0
+					text-decoration: underline
+					padding-left: 10px
+					position: relative
+				&::before
+					content: '\f005'
+					font-family: fontawesome
+					margin-right: 0px
+					text-decoration: none
+					font-size: 14px
+				&:hover
+					color: $accent
+
+	.footer-info
+		p
+			position: relative
+			font-size: 16px
+			padding-left: 20px
+			font-weight: 400
+			margin: 0 0 20px
+			.fas, .far
+				position: absolute
+				left: 0
+				top: 5px
+				color: $accent
+				font-size: 14px
+				opacity: 0.5
+				margin-right: 10px
+				&:hover
+					transition: opacity .5s ease
+					color: #dc85f7
+					opacity: 1
+
+
 
 @import "media" // Всегда в конце
