--- a/app/sass/media.sass
+++ b/app/sass/media.sass
@@ -149,11 +149,16 @@
 		.container 
 			padding-left: 0px
 
-
+	.review
+		padding: 10% 0
 
 	.mm-navbar .mm-title img
 		width: 210px
-
+	
+	.call-back-overley
+		input
+			width: 100%
+			font-size: 14px
 
 
 
@@ -177,6 +182,10 @@
 		flex-direction: column
 		.h2
 			padding-bottom: 15px
+
+	.quotes
+		display: none
+
 
 /*==========  Mobile First  ==========*/
 
