--- a/app/sass/media.sass
+++ b/app/sass/media.sass
@@ -16,6 +16,16 @@
 		.owl-next, .owl-prev
 			top: 160px
 
+	footer .footer-column img
+		margin: 0 0 0 40px
+
+	footer .social-footer ul
+
+		justify-content: flex-start
+		li
+			margin-right: 10px
+
+
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
