--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -745,6 +745,8 @@ section, header
 		right: -60px
 		transform: rotate(0)
 footer
+	padding: 3% 0
+	font-size: 14px
 	background-color: #4c3f79
 	color: #fff
 	.footer-column
@@ -770,7 +772,8 @@ footer
 			padding: 0
 			margin: 0
 			list-style-type: none
-			li a
+			li 
+				a
 				font-size: 18px
 				color: #fff
 				width: 38px
@@ -783,7 +786,6 @@ footer
 				.fa-telegram-plane
 					position: relative
 					left: -1px
-			li a
 				&:hover
 					-webkit-transition: background-color .3s ease
 					transition: background-color .3s ease
@@ -813,11 +815,14 @@ footer
 					text-decoration: underline
 					padding-left: 10px
 					position: relative
+					&:hover, &.active
+						color: $accent
+						text-decoration: none
+						
 				&::before
 					content: '\f005'
 					font-family: fontawesome
 					margin-right: 0px
-					text-decoration: none
 					font-size: 14px
 				&:hover
 					color: $accent
@@ -841,7 +846,11 @@ footer
 					transition: opacity .5s ease
 					color: #dc85f7
 					opacity: 1
-
+	.map
+		opacity: 0.7
+		transition: opacity .5s ease
+		&:hover
+			opacity: 1
 
 
 @import "media" // Всегда в конце
